omni/tests/goldens/types/undefined_ident_19.err
tests/goldens/types/undefined_ident_19.omni:1:20: error: undefined identifier "missing19"
  let result19:int = missing19
                     ^~~ hint: declare the name before using it
